client/head/markup.css
.markup{
  display: inline-block;
  /*white-space: pre-wrap;*/
}
.markup-italic{
  font-style: italic;
}
.markup-bold{
  font-weight: bold;
  color: var(--title);
}
.markup-h1{
  font-size: calc(var(--smart-res-unit) * 5);
}
.markup-h2{
  font-size: calc(var(--smart-res-unit) * 3);
}
.markup-h1, .markup-h2{
  color: var(--title);
  font-weight: lighter;
  /*font-style: italic;*/
  margin-top: 5vh;
}
li{
  display: list-item; /*default*/
}
.markup-code, .markup-code-block{
  transition: background-color .25s ease-in-out;
  font-family: monospace;
  background: var(--card-bg);
  border-radius: calc(.5 * var(--smart-unit));
  box-shadow: var(--bs);
}
.markup-code{
  /*white-space: nowrap;*/
  padding: .5vh .5vw;
  border-radius: .5vh;
}
.markup-code-block{
  /*font-size: calc(1vh * 3);*/
  padding: calc(1 * var(--smart-unit));
  white-space: nowrap;
  overflow-x: auto;
}
.markup-code-keyword{
  color: var(--color);
  font-style: italic;
}
.markup-code-operator{
  color: #555;
  font-weight: bold;
}
.markup-code-value{
  color: var(--color);
}
.markup-quote{
  font-style: italic;
  padding: 1vh 2vw;
  padding-left: 2.5vw;
  border-left: .375vw solid var(--color);
  box-shadow: .5vh .5vh 1vh var(--black);
}
.markup-link{
  color: var(--color);
  transition: color 0.125s ease-in-out;
  text-decoration: underline;
  -webkit-tap-highlight-color: rgba(255, 0, 0, .25);
}
.markup-link:hover{
  color: var(--title);
  /*animation-name: link-hover;
  animation-duration: .25s;
  animation-timing-function: ease-in-out;*/
  text-decoration: underline;
}
.markup-block{
  padding: 1vw 10vw;
}
.markup-object{
  width: 100%;
  height: auto;
  border-radius: .5vh;
  box-shadow: var(--bs);
  /*min-height: 25vw;*/
}
iframe{
  display: block;
  width: 100%;
  height: calc(50vw * 9 / 16);
}
/*Portrait*/
@media (max-aspect-ratio: <<<yield consts.portrait>>>){
  .markup-block{
    padding: 1vw 5vw;
  }
  .markup-quote{
    border-left-width: .5vw;
  }
  .markup iframe{
    height: calc(75vw * 9 / 16);
  }
}
/*.markup *:not(li){
  display: inline-block;
}*/
.markup-inline{
  display: inline;
}
.markup-code-block *{
  display: inline-block;
  white-space: nowrap;
}
/*.markup .markup-h1, .markup .markup-h2{
  display: block;
}*/
/*.markup > span, .markup-h1, .markup-h2{
  display: inline-block;
}*/
/*.markup *:not(.markup-italic):not(.markup-bold):not(.markup-quote):not(.markup-h2):not(.markup-h1):not(.markup-link):not(.markup-code){
  width: 100%;
}*/
.markup-code-block, .markup-object, .markup-block, .markup-span{
  width: 100%;
}
/*.markup *{
  white-space: pre-wrap;
}*/

